(09/13/07)

*** Changed lazy error default from true to false. This affect how
    Swift handles workflows when an error occurs. See the userguide
    for further details.

(09/10/07)

*** Removed ability to specify type of index variable in foreach loops. This
    type was never checked. Any programs which specify the type in a foreach
    statement will need a code modification to remove that type specification.
    Making such a change will not modify workflow behaviour.

(09/08/07)

*** Changed the way arguments are passed to the wrapper. This
    should be more resilient to broken middleware that doesn't
    properly quote arguments.

(09/04/07)

*** Updated wrapper to be more thorough at diagnosing problems.

(08/29/07)

*** Moved @arg to swiftscript namespace/package

*** @filenames disappeared at some point in time. It is back.

*** Fixed some issues with paths returned by fringePaths being
    parsed into the wrong things. It points out that one should 
    be careful about methods typically used to get some human 
    readable representation of data (such as toString()) being 
    relied on to provide any kind of functional consistency.

(08/28/07)

*** Added throttle.score.job.factor to swift.properties (the functionality
    was previously available by manually hacking scheduler.xml)
    
*** Throttle options now accept "off" as a valid value

*** Put @arg back in

*** Changes the configuration to allow loading a specific file even
    if the defaults cannot be found.
    
*** Added PBS and dCache providers as dependencies

*** Typechecks on arrays would fail (this was introduced by the type
    system changes). Fixed.
    
*** Assignments from integer[] to float[] should not fail for type
    reasons (nor should passing an integer[] for a float[] fail the
    typecheck).

(08/23/07)

*** A few changes to the way types work. Whether something is an array
    or not is part of the type now.
    
*** Cleanups to the way things get stored and mappers
